# OverlookC2

./: Cargo.toml  README.md  TECHNICAL_DOCUMENTATION.md
Scripts/: cleanup.bat  restart_c2.bat  setup_logging.bat  setup_vs_env.bat  start_c2.bat
install/: REQUIREMENTS.md  build.sh  install.bat  install_dependencies.bat  install_dependencies.sh
src/: agent.rs  crypto.rs  lib.rs  protocol.rs  teamserver.rs  types.rs  utils.rs
src/server/: main.rs
